k8s/base/ai/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  selector:    
    service: n8n
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
